# docling

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py
src/agents/: __init__.py  relevance_checker.py  research_agent.py  verification_agent.py  workflow.py
src/config/: settings.py
src/core/: __init__.py  llm_client.py  retriever.py  text_splitter.py
src/services/: file_handler.py
src/utils/: draw_workflow.py
