[project]
name = "docling"
version = "1.0.0"
description = "Document processing"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Muhammad Omar Muneer", email = "mumarm45@gmail.com"}
]
license = {text = "MIT"}
keywords = ["ai", "document processing", "claude", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: AI :: Agentic AI :: Document Processing",
]

dependencies = [
    "anthropic>=0.40.0",
    "gradio>=5.0.0",
    "langchain>=0.3.0",
    "langchain-classic>=0.3.0",
    "langchain-core>=0.3.17",
    "langchain-anthropic>=0.3.0",
    "numpy<2",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "torch>=2.2.0",
    "chromadb>=0.5.0",
    "langchain-chroma>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-huggingface>=0.3.0",
    "huggingface-hub>=0.33.5",
    "sentence-transformers>=2.2.2",
    "loguru>=0.7.0",
    "pypdf>=3.16.2",
    "rank_bm25>=0.2.1",
    "ipython>=8.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
docling = "src.web.app:launch_app"

[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
docling = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=docling --cov-report=html"
